<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD PRODUCT"
            android:textColor="@color/off_white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:paddingVertical="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/product_iv"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/ShapeAppearanceOverlay.App.circleIV" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/add_product_iv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="-22dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/off_white"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/off_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:hint="@string/product_name"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selling_price_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/off_white"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/off_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:hint="@string/selling_price"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tax_rate_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/off_white"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/off_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tax_rate_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:hint="@string/tax_rate"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray"
                android:paddingVertical="12dp"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/product_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Service" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_arrow_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_type_expanded_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@color/gray"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                android:visibility="visible">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product"
                        android:textColor="@color/off_white"
                        android:theme="@style/MyRadioButton" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service"
                        android:textColor="@color/off_white"
                        android:theme="@style/MyRadioButton" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/off_white"
        android:paddingVertical="12dp"
        android:text="@string/submit"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/loader_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_bg"
        android:visibility="gone"
        android:focusable="true"
        android:clickable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>